--- a/simulator/index.html
+++ b/simulator/index.html
@@ -27,7 +27,7 @@
                 })
                 display.lightPositions(data); 
             });
-            d3.csv("../input/patterns/moving-z-rainbow.csv").then( (data)=>{
+            d3.csv("../input/patterns/field.csv").then( (data)=>{
                 display.lightPattern(data);
             });
         </script>
