--- a/simulator/index.html
+++ b/simulator/index.html
@@ -11,11 +11,13 @@
         <div id="control">
             <button type="button" onclick="display.play()">Play</button>
             <button type="button" onclick="display.stop()">Stop</button>
-            <input type="range" min="1" max="100" value="50" class="slider" id="frameline">
+            <input type="range" min="0" max="100" value="0" class="slider" id="frameline">
+            <input type="range" min="0" max="6.28" step="0.01" value="0" class="slider" id="rotate">
         </div>
         <script>
             const display = new Lights(d3.select("#lights"));
             display.attachFrameSlider(document.getElementById("frameline"))
+            display.attachRotateSlider(document.getElementById("rotate"))
             new Autosize("#lights",()=>{
                 display.resized();
             })
