dynamic loading and parsing of trees and patterns, generated form the run/jl and stored in json..

--- a/simulator/index.html
+++ b/simulator/index.html
@@ -2,38 +2,30 @@
     <head>
         <title>Tree light simulator</title>
         <script src="res/d3.js"></script>
+        <script src="src/interface.js"></script>
         <script src="src/autosize.js"></script>
         <script src="src/lights.js"></script>
         <link rel="stylesheet" href="src/style.css">
     </head>
     <body>
         <svg width="300px" height="300px" viewbox="-150 -150 300 300" id="lights"></svg>
+        <div id="interface"></div>
         <div id="control">
             <button type="button" onclick="display.play()">Play</button>
             <button type="button" onclick="display.stop()">Stop</button>
             <input type="range" min="0" max="100" value="0" class="slider" id="frameline">
             <input type="range" min="0" max="6.28" step="0.01" value="0" class="slider" id="rotate">
-            <input type="range" min="0" max="6.28" step="0.01" value="0" class="slider" id="angle">
+            <input type="range" min="-3.14" max="3.14" step="0.01" value="0" class="slider" id="angle">
         </div>
         <script>
             const display = new Lights(d3.select("#lights"));
+            const interface = new Interface("#interface","../input/index.json",display);
             display.attachFrameSlider(document.getElementById("frameline"))
             display.attachRotateSlider(document.getElementById("rotate"))
             display.attachAngleSlider(document.getElementById("angle"))
             new Autosize("#lights",()=>{
                 display.resized();
             })
-            d3.text("../input/trees/coords_2021.csv").then((text)=>{
-                // This is because the light positions don't have a header row
-                const data = d3.csvParseRows(text).map((row)=>{
-                    //row.splice(0,1)
-                    return row.map( value => +value )
-                })
-                display.lightPositions(data); 
-            });
-            d3.csv("../input/patterns/matt-sir.csv").then( (data)=>{
-                display.lightPattern(data);
-            });
         </script>
     </body>
 </html>
